--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
     "iron-list": "PolymerElements/iron-list#^2.0.0",
     "paper-card": "PolymerElements/paper-card#^2.0.0",
     "paper-button": "PolymerElements/paper-button#^2.0.0",
-    "paper-input": "PolymerElements/paper-input#^2.0.1"
+    "paper-input": "PolymerElements/paper-input#^2.0.1",
+    "paper-spinner": "PolymerElements/paper-spinner#^2.0.0",
+    "polymerfire": "firebase/polymerfire#^2.1.0"
   }
 }
