--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "paper-button": "PolymerElements/paper-button#^2.0.0",
     "paper-input": "PolymerElements/paper-input#^2.0.1",
     "paper-spinner": "PolymerElements/paper-spinner#^2.0.0",
-    "polymerfire": "firebase/polymerfire#^2.1.0"
+    "polymerfire": "firebase/polymerfire#^2.1.0",
+    "paper-toast": "^2.0.0"
   }
 }
