this commit will
add 5 new entities: erg, finance, oar, race and rigger

--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "paper-dropdown-menu": "^2.0.0",
     "paper-item": "^2.0.0",
     "paper-listbox": "^2.0.0",
-    "paper-toggle-button": "^2.0.0"
+    "paper-toggle-button": "^2.0.0",
+    "iron-image": "^2.1.1"
   }
 }
