--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "paper-item": "^2.0.0",
     "paper-listbox": "^2.0.0",
     "paper-toggle-button": "^2.0.0",
-    "iron-image": "^2.1.1"
+    "iron-image": "^2.1.1",
+    "paper-fab": "^2.0.0"
   }
 }
