--- a/functions/package.json
+++ b/functions/package.json
@@ -10,10 +10,13 @@
     "dotenv": "^4.0.0",
     "firebase-admin": "^4.2.1",
     "firebase-functions": "^0.5.7",
+    "googleapis": "^19.0.0",
     "mocha": "^3.4.2",
     "proxyquire": "^1.8.0",
     "request": "^2.81.0",
-    "sinon": "^2.3.5"
+    "sinon": "^2.3.5",
+    "unirest": "^0.5.1",
+    "yargs": "^8.0.2"
   },
   "private": true
 }
