--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,8 @@
     "paper-listbox": "^2.0.0",
     "paper-toggle-button": "^2.0.0",
     "iron-image": "^2.1.1",
-    "paper-fab": "^2.0.0"
+    "paper-fab": "^2.0.0",
+    "iron-a11y-keys": "PolymerElements/iron-a11y-keys#^2.0.0",
+    "lazy-imports": "Polymer/lazy-imports#^2.0.0"
   }
 }
