--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "assert": "^1.4.1",
     "bluebird": "^3.5.0",
+    "bower": "^1.8.14",
     "eslint": "^3.19.0",
     "faker": "^4.1.0",
     "firebase-admin": "^5.0.0",
